--- a/bond.html
+++ b/bond.html
@@ -50,7 +50,7 @@
         <form id="calculatorForm" class="calculator-form">
             <div class="form-group mb-4">
                 <label for="calculatorType">Select Calculator</label>
-                <select class="form-control custom-select" id="calculatorType">
+                <select class="form-select " id="calculatorType">
                     <option value="bond">Bond</option>
                     <option value="loan">Loan</option>
                 </select>
