--- a/bond.html
+++ b/bond.html
@@ -46,63 +46,67 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container calculator-container mt-5 mb-5">
-        <form id="calculatorForm" class="calculator-form">
-            <div class="form-group mb-4">
-                <label for="calculatorType">Select Calculator</label>
-                <select class="form-select " id="calculatorType">
-                    <option value="bond">Bond</option>
-                    <option value="loan">Loan</option>
+    <!-- Calculator Form -->
+<div class="container calculator-container mt-5 mb-5">
+    <form id="calculatorForm" class="calculator-form">
+        <div class="form-group mb-4">
+            <label for="calculatorType" class="form-label">Select Calculator</label>
+            <select class="form-select" id="calculatorType" aria-label="Select Calculator">
+                <option value="bond">Bond</option>
+                <option value="loan">Loan</option>
+            </select>
+        </div>
+        
+        <!-- Bond Calculator Fields -->
+        <div id="bondCalculatorFields">
+            <h4 class="mt-4">Bond Calculator</h4>
+            <div class="form-group mb-3">
+                <label for="bondAmount" class="form-label">Amount (TZS)</label>
+                <input type="tel" class="form-control" id="bondAmount" placeholder="Enter Bond Amount" aria-label="Bond Amount">
+            </div>
+            <div class="form-group mb-3">
+                <label for="bondInterestRate" class="form-label">Interest Rate (%)</label>
+                <input type="tel" class="form-control" id="bondInterestRate" placeholder="Enter Interest Rate" aria-label="Bond Interest Rate">
+            </div>
+            <div class="form-group mb-3">
+                <label for="bondYears" class="form-label">Duration (Years)</label>
+                <input type="tel" class="form-control" id="bondYears" placeholder="Enter Duration" aria-label="Bond Duration">
+            </div>
+            <div class="form-group mb-3">
+                <label for="bondFrequency" class="form-label">Interest Paid</label>
+                <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
+                    <option value="monthly">Monthly</option>
+                    <option value="quarterly">Quarterly</option>
+                    <option value="semi-annually">Semi-annually</option>
+                    <option value="yearly">Yearly</option>
                 </select>
             </div>
-            
-            <!-- Bond Calculator Fields -->
-            <div id="bondCalculatorFields">
-                <h4 class="mt-4">Bond Calculator</h4>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
-                </div>
-                <div class="form-group mb-3">
-                    <label for="bondFrequency">Interest Paid</label>
-                    <select class="form-control custom-select" id="bondFrequency">
-                        <option value="monthly">Monthly</option>
-                        <option value="quarterly">Quarterly</option>
-                        <option value="semi-annually">Semi-annually</option>
-                        <option value="yearly">Yearly</option>
-                    </select>
-                </div>
-            </div>
+        </div>
 
-            <!-- Loan Calculator Fields (hidden by default) -->
-            <div id="loanCalculatorFields" style="display: none;">
-                <h4 class="mt-4">Loan Calculator</h4>
-                <div class="form-group mb-3">
-                    <label for="loanAmount">Amount (TZS)</label>
-                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Amount">
-                </div>
-                <div class="form-group mb-3">
-                    <label for="loanInterestRate">Interest Rate (%)</label>
-                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
-                </div>
-                <div class="form-group mb-3">
-                    <label for="loanYears">Years</label>
-                    <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration">
-                </div>
+        <!-- Loan Calculator Fields (hidden by default) -->
+        <div id="loanCalculatorFields" style="display: none;">
+            <h4 class="mt-4">Loan Calculator</h4>
+            <div class="form-group mb-3">
+                <label for="loanAmount" class="form-label">Amount (TZS)</label>
+                <input type="text" class="form-control" id="loanAmount" placeholder="Enter Loan Amount" aria-label="Loan Amount">
             </div>
+            <div class="form-group mb-3">
+                <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
+                <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate" aria-label="Loan Interest Rate">
+            </div>
+            <div class="form-group mb-3">
+                <label for="loanYears" class="form-label">Duration (Years)</label>
+                <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration" aria-label="Loan Duration">
+            </div>
+        </div>
 
-            <!-- Buttons -->
-            <div class="button-group mt-4">
-                <button type="submit" class="btn btn-dark w-100">Calculate</button>
-                <button type="button" class="btn btn-light w-100 mt-3" id="clearFormBtn">Clear</button>
-            </div>
-        </form>
-    </div>
+        <!-- Buttons -->
+        <div class="button-group mt-4">
+            <button type="submit" class="btn btn-dark w-100">Calculate</button>
+            <button type="button" class="btn btn-outline-secondary w-100 mt-3" id="clearFormBtn">Clear</button>
+        </div>
+    </form>
+</div>
 
     <!-- Footer -->
     <footer class="text-center mt-5">
