--- a/bond.html
+++ b/bond.html
@@ -14,86 +14,96 @@
 
     <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo"></a>
+        <div class="container-fluid d-flex align-items-center">
+            <a class="navbar-brand me-auto" href="#">
+                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+            </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span></span><span></span><span></span>
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
         </div>
 
+        <!-- Centered Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Loans</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <ul class="navbar-nav mx-auto text-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Loans</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
             </ul>
         </div>
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="calculator-container w-100">
-            <form id="calculatorForm">
-                <div class="form-group mb-4">
-                    <label for="calculatorType" class="form-label">Select Calculator</label>
-                    <select class="form-select" id="calculatorType">
-                        <option value="bond">Bond</option>
-                        <option value="loan">Loan</option>
+    <div class="container mt-5 mb-5 d-flex justify-content-center">
+        <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
+            <div class="form-group mb-4 text-center">
+                <label for="calculatorType" class="form-label">Select Calculator</label>
+                <select class="form-select" id="calculatorType" aria-label="Select Calculator">
+                    <option value="bond">Bond</option>
+                    <option value="loan">Loan</option>
+                </select>
+            </div>
+
+            <!-- Bond Calculator Fields -->
+            <div id="bondCalculatorFields">
+                <h4 class="text-center mt-4">Bond Calculator</h4>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
+                    <label for="bondAmount">Amount (TZS)</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
+                    <label for="bondInterestRate">Interest Rate (%)</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="bondYears" placeholder="Duration (Years)">
+                    <label for="bondYears">Duration (Years)</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
+                        <option value="monthly">Monthly</option>
+                        <option value="quarterly">Quarterly</option>
+                        <option value="semi-annually">Semi-annually</option>
+                        <option value="yearly">Yearly</option>
                     </select>
                 </div>
+            </div>
 
-                <!-- Bond Calculator Fields -->
-                <div id="bondCalculatorFields">
-                    <h4 class="mt-4">Bond Calculator</h4>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="bondAmount" placeholder="Amount (TZS)" step="0.01">
-                        <label for="bondAmount">Amount (TZS)</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" step="0.01">
-                        <label for="bondInterestRate">Interest Rate (%)</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="bondYears" placeholder="Duration (Years)" step="0.01">
-                        <label for="bondYears">Duration (Years)</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <select class="form-select" id="bondFrequency">
-                            <option value="monthly">Monthly</option>
-                            <option value="quarterly">Quarterly</option>
-                            <option value="semi-annually">Semi-annually</option>
-                            <option value="yearly">Yearly</option>
-                        </select>
-                        <label for="bondFrequency">Bond Interest Frequency</label>
-                    </div>
+            <!-- Loan Calculator Fields (hidden by default) -->
+            <div id="loanCalculatorFields" style="display: none;">
+                <h4 class="text-center mt-4">Loan Calculator</h4>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
+                    <label for="loanAmount">Amount (TZS)</label>
                 </div>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)">
+                    <label for="loanInterestRate">Interest Rate (%)</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="number" step="0.01" class="form-control" id="loanYears" placeholder="Duration (Years)">
+                    <label for="loanYears">Duration (Years)</label>
+                </div>
+            </div>
 
-                <!-- Loan Calculator Fields -->
-                <div id="loanCalculatorFields" class="d-none">
-                    <h4 class="mt-4">Loan Calculator</h4>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="loanAmount" placeholder="Amount (TZS)" step="0.01">
-                        <label for="loanAmount">Amount (TZS)</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)" step="0.01">
-                        <label for="loanInterestRate">Interest Rate (%)</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="loanYears" placeholder="Duration (Years)" step="0.01">
-                        <label for="loanYears">Duration (Years)</label>
-                    </div>
-                </div>
-
-                <!-- Buttons -->
-                <div class="d-grid gap-2 mt-4">
-                    <button type="submit" class="btn btn-dark">Calculate</button>
-                    <button type="button" class="btn btn-outline-secondary" id="clearFormBtn">Clear</button>
-                </div>
-            </form>
-        </div>
+            <!-- Buttons -->
+            <div class="d-grid gap-2 mt-4">
+                <button type="submit" class="btn btn-dark">Calculate</button>
+                <button type="button" class="btn btn-outline-secondary" id="clearFormBtn">Clear</button>
+            </div>
+        </form>
     </div>
 
     <!-- Footer -->
@@ -107,9 +117,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="modalResult"></div>
+                <div class="modal-body" id="modalResult">
+                    <!-- Calculation results will be displayed here -->
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
@@ -117,7 +129,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
