--- a/bond.html
+++ b/bond.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container mt-5 mb-5 d-flex justify-content-center">
+    <div class="container mt-5 mb-5 justify-content-center">
         <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
             <div class="form-group mb-4 text-center">
                 <label for="calculatorType" class="form-label">Select Calculator</label>
