--- a/bond.html
+++ b/bond.html
@@ -19,10 +19,8 @@
                 <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
+            <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
         </div>
 
@@ -46,7 +44,7 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container mt-5 mb-5 justify-content-center">
+    <div class="container mt-5 mb-5 d-flex justify-content-center">
         <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
             <div class="form-group mb-4 text-center">
                 <label for="calculatorType" class="form-label">Select Calculator</label>
