--- a/bond.html
+++ b/bond.html
@@ -20,7 +20,9 @@
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
             </button>
         </div>
 
