--- a/bond.html
+++ b/bond.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- Calculator Form -->
-<div class="container mt-5 mb-5">
+<div class="container calculator-container mt-5 mb-5">
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8 col-sm-10">
             <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
@@ -73,7 +73,7 @@
                         <input type="number" step="0.01" class="form-control" id="bondYears" placeholder="Duration (Years)">
                         <label for="bondYears">Duration (Years)</label>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-group mb-3">
                         <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
                             <option value="monthly">Monthly</option>
                             <option value="quarterly">Quarterly</option>
