--- a/bond.html
+++ b/bond.html
@@ -1,55 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
-    
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/bond.css">
-</head>
-<body>
-
-    <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
-        <div class="container-fluid d-flex align-items-center">
-            <a class="navbar-brand me-auto" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
-            </a>
-            <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-
-        <!-- Centered Navbar Links -->
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav mx-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Loans</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Calculator Form -->
-<div class="container calculator-container mt-5 mb-5">
+<!-- Calculator Form -->
+<div class="container mt-5 mb-5">
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8 col-sm-10">
             <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
+                <div id="alert" class="alert d-none" role="alert"></div> <!-- Validation alert -->
+
                 <div class="form-group mb-4 text-center">
                     <label for="calculatorType" class="form-label">Select Calculator</label>
                     <select class="form-select" id="calculatorType" aria-label="Select Calculator">
@@ -62,18 +17,18 @@
                 <div id="bondCalculatorFields">
                     <h4 class="text-center mt-4">Bond Calculator</h4>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
+                        <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)" required>
                         <label for="bondAmount">Amount (TZS)</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
+                        <input type="number" step="0.01" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" required>
                         <label for="bondInterestRate">Interest Rate (%)</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="bondYears" placeholder="Duration (Years)">
+                        <input type="number" step="0.01" class="form-control" id="bondYears" placeholder="Duration (Years)" required>
                         <label for="bondYears">Duration (Years)</label>
                     </div>
-                    <div class="form-group mb-3">
+                    <div class="form-floating mb-3">
                         <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
                             <option value="monthly">Monthly</option>
                             <option value="quarterly">Quarterly</option>
@@ -87,15 +42,15 @@
                 <div id="loanCalculatorFields" style="display: none;">
                     <h4 class="text-center mt-4">Loan Calculator</h4>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
+                        <input type="number" step="0.01" class="form-control" id="loanAmount" placeholder="Amount (TZS)" required>
                         <label for="loanAmount">Amount (TZS)</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)">
+                        <input type="number" step="0.01" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)" required>
                         <label for="loanInterestRate">Interest Rate (%)</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="number" step="0.01" class="form-control" id="loanYears" placeholder="Duration (Years)">
+                        <input type="number" step="0.01" class="form-control" id="loanYears" placeholder="Duration (Years)" required>
                         <label for="loanYears">Duration (Years)</label>
                     </div>
                 </div>
@@ -109,34 +64,3 @@
         </div>
     </div>
 </div>
-
-    <!-- Footer -->
-    <footer class="text-center mt-5">
-        <p>Bond Calculator &copy; 2024 Safe Bank Plc.</p>
-    </footer>
-
-    <!-- Modal for displaying results -->
-    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="modalResult">
-                    <!-- Calculation results will be displayed here -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Bootstrap 5 JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
-    <script src="assets/js/bond.js"></script>
-
-</body>
-</html>
