--- a/bond.html
+++ b/bond.html
@@ -52,7 +52,7 @@
             <form id="calculatorForm" class="calculator-form p-4 shadow-sm rounded-3 bg-light">
                 <div id="alert" class="alert d-none" role="alert"></div> <!-- Validation alert -->
 
-                <div class="form-group mb-4 text-center">
+                <div class="form-group mb-3 text-center">
                     <label for="calculatorType" class="form-label">Select Calculator</label>
                     <select class="form-select" id="calculatorType" aria-label="Select Calculator">
                         <option value="bond">Bond</option>
@@ -75,7 +75,7 @@
                         <input type="number" step="0.01" class="form-control" id="bondYears" placeholder="Duration (Years)" required>
                         <label for="bondYears">Duration (Years)</label>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-group mb-3">
                         <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
                             <option value="monthly">Monthly</option>
                             <option value="quarterly">Quarterly</option>
