--- a/bond.html
+++ b/bond.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="path/to/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS -->
+    <link rel="stylesheet" href="assets/css/bond.css"> <!-- Link to your CSS -->
 </head>
 <body>
     <nav class="navbar">
