--- a/bond.html
+++ b/bond.html
@@ -92,6 +92,6 @@
     </footer>
 
     <script src="path/to/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script> <!-- Link to your JavaScript -->
+    <script src="assets/js/script.js"></script> <!-- Link to your JavaScript -->
 </body>
 </html>
